=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_01-dev

plug leak in DIR_MERGE, thanks to Matt Sergeant for the spot

fixes to run and pass 'make test' on ActivePerl [Randy Kobes, Gerald Richter]

Makefile.PL:post_initialize fix for win32, thanks to john sterling for 
the spot

fixes for ActivePerl [Gurusamy Sarathy <gsar@ActiveState.com>]

change apaci/Makefile.tmpl and src/modules/perl/Makefile so Perl's
include path comes before /usr/local/include, e.g. to make sure Perl's 
patchlevel.h is used, thanks to Ryan Morgan for the spot

avoid duplicate buffer copy in {read,get}_client_block by reading
directly into Perl's SV buffer

modules/request test fix
[Ken Williams <ken@forum.swarthmore.edu>]

switch usage of hard_timeout() to soft_timeout(), so if SIGALRM
happens during Apache::{print,read}, the script will continue run,
allowing proper cleanup (e.g. DESTROY)

fix refcnt bug in $r->get_handlers,
thanks Geoffrey Young for the spot

add PerlCleanupHandler to the {get,set}_handlers table,
thanks Geoffrey Young for the spot

fix $r->args(undef), thanks to Greg Cope for the spot

quotemeta path_info in Registry regexp
[Tobias Hoellrich <thoellri@adobe.com>]

flush r->finfo cache if r->filename fails
[Roger Espel Llima <espel@iagora.net>]

fix per-dir merging of PerlSetupEnv [Eric Cholet <cholet@logilune.com>]

INSTALL.raven update [Adam Qualset <adam@covalent.net>]

backed out $Apache::Server::ConfigTestOnly until proper Apache support
is in place

fix $r->bytes_sent($bytes)

support version parsing of 1.3.13-dev's httpd.h

fix for 'sub handler : method {}' support when method is not found
[Eric Cholet <cholet@logilune.com>]

Apache::ExtUtils will now generate and END routine to call
ap_remove_module() [Christopher Chan-N <uichannui@tiny.org>]

rename Apache::{PerlRun,RegistryNG}::update_mtime to set_mtime, so
Apache::update_mtime is not overridden