@@ -3,6 +3,9 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
+- segfaults with DBI->connect (mysql), reported that downgrade to
+  1.21_03 cures
+
 - Apache::read() does not clear $_[1] before appending data, bug or feature?
   [Cyrus Rahman <cr@jcmax.com>]
 
@@ -68,8 +71,6 @@ CONFIG STUFF
 
 - sort out hpux Config.pm issues when $Config{ld} eq 'ld' but
   $Config{ldflags} have -Wl arguments
-
-- update mod_ssl test config
 
 - PERL_STATIC_EXTS doesnt work with USE_APACI=1
 
