@@ -10,6 +10,10 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_01-dev
 
+'make test' config fixes for mod_ssl
+[David Mitchell <davem@fdgroup.co.uk>, Mark Murphy <mark@opus.pass.wayne.edu>,
+Stephen Schaefer <stephen@networks.com>]
+
 plug leak in DIR_MERGE, thanks to Matt Sergeant for the spot
 
 fixes to run and pass 'make test' on ActivePerl [Randy Kobes, Gerald Richter]
